--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 <div id="mainbody">
 <h1 align="left">Maitripa College Tibetan Program Digital Debate Site</h1>
-<h3>This website is designed to assist students of Tibetan logic and debate. Currently it serves three functions:</h3>
+<h3>This website is designed to assist students of Tibetan logic and debate. Currently it has these features:</h3>
 <ul>
 <li>A clickable list to the left of each page displaying some important terms (mtshon bya), definitions (mtshan nyid), divisions (dbye ba), and illustrations (mtshan gzhi) from Yong-dzin Pur-bu-jok's "Collected Topics: The Smaller Path of Reasoning".</li>
+<li><a href="mu.html">A page demonstrating the possibilities for the comparison of phenomena.</a></li>
 <li><a href="modes.html">An interactive page demonstrating the modes of a syllogistic reason.</a></li>
 <li><a href="fling.html">An interactive page illustrating how to fling an absurd consequence in the presence of an incorrect entailment statement.</a></li>
 </ul>
