--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <li>A clickable list to the left of each page displaying some important terms (mtshon bya), definitions (mtshan nyid), divisions (dbye ba), and illustrations (mtshan gzhi) from Yong-dzin Pur-bu-jok's "Collected Topics: The Smaller Path of Reasoning".</li>
 <li><a href="mu.html">A page displaying the possibilities for the comparison of phenomena.</a></li>
 <li><a href="modes.html">An interactive page demonstrating the modes of a syllogistic reason.</a></li>
+<li><a href="threeposs.html">An interactive page demonstrating correct and incorrect entailments.</a></li>
 <li><a href="fling.html">An interactive page illustrating how to fling an absurd consequence in the presence of an incorrect entailment statement.</a></li>
 </ul>
 <p class="yellow">Under construction, February 2019. Copyright William Magee, Maitripa College, Portland, Oregon.</p>
