--- a/mu.html
+++ b/mu.html
@@ -196,12 +196,12 @@
 <div id="circleSMX"></div>
 </div>
 
-<div id="fourposs"><p align="center">Four Possibilities</p>
+<div id="fourposs"><p align="center"><a href="fourposs.html">Four Possibilities</a></p>
 <div id="circleBFOUR"></div>
 <div id="circleSFOUR"></div>
 </div>
 
-<div id="threeposs"><p align="center">Three Possibilities</p>
+<div id="threeposs"><p align="center"><a href="threeposs.html">Three Possibilities</a></p>
 <div id="circleBTHREE"></div>
 <div id="circleSTHREE"></div>
 </div>
