--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<title>Tibetan Debate</title>
+<title>Digital Debate Assistant</title>
 <link rel="stylesheet" type="text/css" href="debate.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
 <div id="mainbody">
-<h1 align="left">Digital Tibetan Debate</h1>
+<h1 align="left">Digital Debate Assistant</h1>
 <h3>This website is designed to assist students of Tibetan logic and debate. Currently it has the following features:</h3>
 <ul>
-<li>Important terms (mtshon bya), definitions (mtshan nyid), divisions (dbye ba), and illustrations (mtshan gzhi) from Yong-dzin Pur-bu-jok's "Collected Topics: The Smaller Path of Reasoning".</li><br>
 <li><a href="mu.html">A page displaying the possibilities for the comparison of phenomena.</a><br></li><br>
 <li><a href="modes.html">An interactive page demonstrating the modes of a syllogistic reason.</a><br></li><br>
-<li><a href="threeposs.html">An interactive page demonstrating correct and incorrect entailments.</a><br></li><br>
-<li><a href="fling.html">An interactive page illustrating how to fling an absurd consequence in the presence of an incorrect entailment statement.</a><br></li><br>
+<li><a href="threeposs.html">An interactive page demonstrating correct and incorrect pervasions.</a><br></li><br>
+<li><a href="fling.html">An interactive page demonstrating how absurd consequences flow from wrong pervasions.</a><br></li><br>
 <li><a href="fourposs.html">An interactive page illustrating four possibilities.</a><br></li><br>
+<li><a href="mutualex.html">An interactive page illustrating mutual exclusion.</a><br></li><br>
+<li><a href="mutualinc.html">An interactive page illustrating mutual inclusion.</a><br></li><br>
 </ul>
-<p class="yellow">Under construction, February 2019. Copyright William Magee, Maitripa College, Portland, Oregon.</p>
+<p class="yellow">Under construction, March 2019. William Magee, Maitripa College.</p>
 
 </div>
 
