--- a/mu.html
+++ b/mu.html
@@ -186,12 +186,12 @@
 </div>
 <div id="fourvenn">
 <h2 align="center">The Possibilities for Comparison of Phenomena<br></h2>
-<div id="mutinc"><p align="center">Mutually Inclusive</p>
+<div id="mutinc"><p align="center"><a href="mutualinc.html">Mutually Inclusive</a></p>
 <div id="circleBMI"></div>
 <div id="circleSMI"></div>
 </div>
 
-<div id="mutex"><p align="center">Mutually Exclusive</p>
+<div id="mutex"><p align="center"><a href="mutualex.html">Mutually Exclusive</a></p>
 <div id="circleBMX"></div>
 <div id="circleSMX"></div>
 </div>
