--- a/fourposs.html
+++ b/fourposs.html
@@ -38,11 +38,15 @@ function enterBoth(){
 </script>
 <style>
   input[type=button] {
-  width: 12.2em;  height: 2.0em;
+  width: 11em;  height: 2em;
 }
 p.TPblack {
   color: black;
-  font-size: 18pt;
+  font-size: 24pt;
+}
+p.TPwhite {
+  color: white;
+  font-size: 24pt;
 }
 #fourposs {
   position: absolute;
@@ -82,28 +86,24 @@ p.TPblack {
 }
 #leftsetFP {
   position: absolute;
-  top: 500px;
-  left: 140px;
+  top: 540px;
+  left: 280px;
   width: 120px;
   height: 45px;
-  background-color: pink;
-  border:1px solid white;
   z-index: 1;
 }
 #rightsetFP {
   position: absolute;
-  top: 500px;
-  left: 1000px;
+  top: 540px;
+  left: 980px;
   width: 120px;
   height: 45px;
-  background-color: orange;
-  border:1px solid white;
   z-index: 1;
 }
 #submitrightFP {
   position: absolute;
   top: 500px;
-  left: 1140px;
+  left: 1040px;
   width: 200px;
   height: 85px;
   z-index: 1;
@@ -113,12 +113,12 @@ p.TPblack {
   top: 500px;
   left: 280px;
   width: 200px;
-  height: 85px;
+  height: 25px;
   z-index: 1;
 }
 #submitbothFP {
   position: absolute;
-  top: 560px;
+  top: 500px;
   left: 1100px;
   width: 200px;
   height: 85px;
@@ -126,12 +126,10 @@ p.TPblack {
 }
 #bothFP {
   position: absolute;
-  top: 500px;
+  top: 560px;
   left: 660px;
   width: 120px;
   height: 45px;
-  background-color: pink;
-  border:1px solid white;
   z-index: 1;
 }
 #submitneitherFP {
@@ -147,14 +145,12 @@ p.TPblack {
   left: 580px;
   width: 120px;
   height: 45px;
-  background-color: yellow;
-  border:1px solid white;
 }
 #commonlocusFP {
   position: absolute;
   top: 1000px;
   left: 840px;
-  width: 680px;
+  width: 880px;
   height: 68px;
   background-color: #7BEBA4;
   border:1px solid white;
@@ -200,23 +196,23 @@ p.TPblack {
 <h2 align="left"><br><br>Four Possibilities: Finding A Common Locus<br></h2>
 <div id="circleLEFT"></div>
 <div id="circleRIGHT"></div>
-<div id="neitherFP"><p class="TPblack" align="center"><span id='neitherText'></span> </p></div>
-<div id="leftsetFP"><p class="TPblack" align="center"><span id='leftText'></span> </p></div>
-<div id="rightsetFP"><p class="TPblack" align="center" s><span id='rightText'></span></p></div>
+<div id="neitherFP"><p class="TPwhite" align="center"><span id='neitherText'></span> </p></div>
+<div id="leftsetFP"><p class="TPwhite" align="center"><span id='leftText'></span> </p></div>
+<div id="rightsetFP"><p class="TPwhite" align="center" s><span id='rightText'></span></p></div>
 
-<div id="bothFP"><p class="TPblack" align="center" s><span id='bothText'></span></p></div>
+<div id="bothFP"><p class="TPwhite" align="center" s><span id='bothText'></span></p></div>
 
 <div id="submitleftFP"><input type='text' id='leftInput' value='' />
-<input type='button' onclick='enterLeft()' value='Left But Not Right'/>
+<input type='button' onclick='enterLeft()' value='Left Set'/>
 </div>
 
 <div id="submitrightFP"><input type='text' id='rightInput' value='' />
-<input type='button' onclick='enterRight()' value='Right But Not Left'/>
+<input type='button' onclick='enterRight()' value='Right Set'/>
 </div>
 </div>
 
 <div id="submitbothFP"><input type='text' id='bothInput' value='' />
-<input type='button' onclick='enterBoth()' value='Both Right and Left'/>
+<input type='button' onclick='enterBoth()' value='Something That Is Both'/>
 </div>
 </div>
 
@@ -225,7 +221,7 @@ p.TPblack {
 <div id="submitneitherFP"><input type='text' id='neitherInput' value='' />
 <input type='button' onclick='enterNeither()' value='Neither Left Nor Right'/>
 </div>
-<div id="commonlocusFP"><p align="center" class="TPblack">[ <span id='bothText2'></span> ] is a common locus of [ <span id='leftText2'></span> ] and [ <span id='rightText2'></span> ]. <br></p></div>
+<div id="commonlocusFP"><p align="center" class="TPblack">[ <span id='bothText2'></span> ] is both [ <span id='leftText2'></span> ] and [ <span id='rightText2'></span> ]. <br></p></div>
 </div>
 </body></html>
 
