--- a/threeposs.html
+++ b/threeposs.html
@@ -30,11 +30,15 @@ function enterNeither(){
 </script>
 <style>
   input[type=button] {
-  width: 20em;  height: 2.5em;
+  width: 12em;  height: 2em;
 }
 p.TPblack {
   color: black;
-  font-size: 18pt;
+  font-size: 24pt;
+}
+p.TPwhite {
+  color: white;
+  font-size: 24pt;
 }
 #threeposs {
   position: absolute;
@@ -75,8 +79,7 @@ p.TPblack {
   left: 440px;
   width: 120px;
   height: 45px;
-  background-color: pink;
-  border:1px solid white;
+  background-color: blue;
 }
 #outsideTP {
   position: absolute;
@@ -84,8 +87,7 @@ p.TPblack {
   left: 440px;
   width: 120px;
   height: 45px;
-  background-color: orange;
-  border:1px solid white;
+  background-color: green;
 }
 #submitoutTP {
   position: absolute;
@@ -114,15 +116,14 @@ p.TPblack {
   left: 440px;
   width: 120px;
   height: 45px;
-  background-color: yellow;
-  border:1px solid white;
+  background-color: #000033;
 }
 #pervasionTP {
   position: absolute;
   top: 880px;
-  left: 660px;
-  width: 580px;
-  height: 148px;
+  left: 520px;
+  width: 880px;
+  height: 168px;
   background-color: #7BEBA4;
   border:1px solid white;
 }
@@ -164,26 +165,28 @@ p.TPblack {
            
 </div>
 <div id="threeposs">
-<h2 align="left"><br><br>Three Possibilities: Determining Correct and Incorrect Entailment<br></h2>
+<h2 align="left"><br><br>Three Possibilities: Determining Correct and Incorrect Pervasions<br></h2>
 <div id="circleBTP"></div>
 <div id="circleSTP"></div>
-<div id="neitherTP"><p class="TPblack" align="center"><span id='neitherText'></span> </p></div>
-<div id="outsideTP"><p class="TPblack" align="center"><span id='outerText'></span> </p></div>
-<div id="insideTP"><p class="TPblack" align="center" s><span id='innerText'></span></p></div>
+<div id="neitherTP"><p class="TPwhite" align="center"><span id='neitherText'></span> </p></div>
+<div id="outsideTP"><p class="TPwhite" align="center"><span id='outerText'></span> </p></div>
+<div id="insideTP"><p class="TPwhite" align="center" s><span id='innerText'></span></p></div>
 <div id="submitoutTP"><input type='text' id='outInput' value='' />
-<input type='button' onclick='enterOuter()' value='Outer but not Inner'/>
+<input type='button' onclick='enterOuter()' value='Outer Set'/>
 </div>
 
 <div id="submitinnerTP"><input type='text' id='innerInput' value='' />
-<input type='button' onclick='enterInner()' value='Both Inner and Outer'/>
+<input type='button' onclick='enterInner()' value='Inner Set'/>
 </div>
 </div>
 
 <div id="submitneitherTP"><input type='text' id='neitherInput' value='' />
 <input type='button' onclick='enterNeither()' value='Neither Inner Nor Outer'/>
 </div>
-<div id="pervasionTP"><p align="center" class="TPblack">Whatever is a [<span id='innerText2'></span>] is necessarily a [<span id='outerText2'></span> ]. <br><br>Whatever is a [<span id='outerText3'></span>] is not necessarily a [<span id='innerText3'></span>].
-<br><br>[<span id='neitherText2'></span>] is neither a [<span id='innerText4'></span>] nor a [<span id='outerText4'></span>].<br></p></div>
+<div id="pervasionTP">
+	<p align="center" class="TPblack">Whatever is a [<span id='innerText2'></span>] is necessarily a [<span id='outerText2'></span> ].</p> 
+	<p align="center" class="TPblack">Whatever is not [<span id='outerText3'></span>] is necessarily not [<span id='innerText3'></span>].</p> 
+	<p align="center" class="TPblack">[<span id='neitherText2'></span>] is neither a [<span id='innerText4'></span>] nor a [<span id='outerText4'></span>].<br></p></div>
 </div>
 </body></html>
 
