--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="mainbody">
-<h1 align="left">Digital Debate Assistant</h1>
+<h1 align="left">Open-Source Geshe: A Digital Debate Assistant</h1>
 <h3>This website is designed to assist students of Tibetan logic and debate. Currently it has the following features:</h3>
 <ul>
 <li><a href="mu.html">A page displaying the possibilities for the comparison of phenomena.</a><br></li><br>
@@ -18,7 +18,7 @@
 <li><a href="mutualex.html">An interactive page illustrating mutual exclusion.</a><br></li><br>
 <li><a href="mutualinc.html">An interactive page illustrating mutual inclusion.</a><br></li><br>
 </ul>
-<p class="yellow">Under construction, March 2019. William Magee, Maitripa College.</p>
+<p class="yellow">Under construction, June 2019. William Magee, Maitripa College.<br>Source code available at <a href="http://github.com/wam7c/debate"</a> Github.</p>
 
 </div>
 
