--- a/start.html
+++ b/start.html
@@ -20,7 +20,7 @@
 body {
   font-family: Verdana, Helvetica, Arial, sans-serif;
   color: black;
-  background-color: Yellow;
+  background-color: #B2B0A3;
   line-height: 125%;
   padding: 0;
   margin: 0;
@@ -44,11 +44,10 @@ a:hover {
 
 <body>
            
-<p>The Digital Debate Assistant provides Challenger and Defender with a graphical way to envision aspects of a typical Tibetan monastic debate. Pages include a display of the possibilities for interaction between phenomena and a method for seeing the three modes of a correct syllogistic reasoning. Another page assists in setting-up and flinging of an absurd consequence that flows from an incorrect pervasion statement.</p>
+<p>Open-Source Geshe, A Digital Debate Assistant, provides students of Tibetan logic with a graphical way to envision aspects of a typical Collected Topics debate. Pages include a display of the possibilities for interaction between phenomena and a method for learning the three modes of a correct syllogistm. Open-Source Geshe also assists in setting-up and flinging an absurd consequence flowing from an incorrect pervasion statement.</p>
 
-<p>The list below displays a few common terms (<i>mtshon bya</i>), together with their definitions (<i>mtshan nyid</i>), divisions (<i>dbye ba</i>), and illustrations (<i>mtshan gzhi</i>) used in Tibetan Monastic debates. These definitions are drawn from Yong-dzin Pur-bu-jok's "Collected Topics: The Smaller Path of Reasoning"</p>
+<p>The list below displays a few common definienda (<i>mtshon bya</i>), together with definition (<i>mtshan nyid</i>), divisions (<i>dbye ba</i>), and illustrations (<i>mtshan gzhi</i>). These terms are drawn from Yong-dzin Pur-bu-jok's "Collected Topics: The Smaller Path of Reasoning"</p>
  
-<p>Under construction, March 2019, by Bill Magee, Maitripa College, Portland, Oregon.</p>
 
 </body>
 </html>
