--- a/terms/start.html
+++ b/terms/start.html
@@ -20,7 +20,7 @@
 body {
   font-family: Verdana, Helvetica, Arial, sans-serif;
   color: black;
-  background-color: white;
+  background-color: #B2B0A3;
   line-height: 125%;
   padding: 0;
   margin: 0;
@@ -44,8 +44,10 @@ a:hover {
 
 <body>
            
-<p>The list below displays a few important terms (<i>mtshon bya</i>), definitions (<i>mtshan nyid</i>), divisions (<i>dbye ba</i>), and illustrations (<i>mtshan gzhi</i>) from Yong-dzin Pur-bu-jok's "Collected Topics: The Smaller Path of Reasoning"</p> 
-<p>Under construction, February 2019, by Bill Magee, Maitripa College, Portland, Oregon.</p>
+<p>Open-Source Geshe, A Digital Debate Assistant, provides students of Tibetan logic with a graphical way to envision aspects of a typical Collected Topics debate. Pages include a display of the possibilities for interaction between phenomena and a method for learning the three modes of a correct syllogistm. Open-Source Geshe also assists in setting-up and flinging an absurd consequence flowing from an incorrect pervasion statement.</p>
+
+<p>The list below displays a few common definienda (<i>mtshon bya</i>), together with definition (<i>mtshan nyid</i>), divisions (<i>dbye ba</i>), and illustrations (<i>mtshan gzhi</i>). These terms are drawn from Yong-dzin Pur-bu-jok's "Collected Topics: The Smaller Path of Reasoning"</p>
+ 
 
 </body>
 </html>
