--- a/fling.html
+++ b/fling.html
@@ -159,14 +159,25 @@ p.TPwhite {
 #vennbodyfl {
   position: absolute;
   top: 20px;
-  left: 420px;
+  left: 620px;
   width: 880px;
   height: 810px;
   background-color: #000033;
 }
+#PerdueQuote {
+  position: absolute;
+  top: 280px;
+  left: 80px;
+  width: 540px;
+  height: 810px;
+}
 
 </style>
 <body>
+<div id="PerdueQuote">
+<p align="center" style="font-size:22px; line-height: 1.8"><i>"The procedure involves stating to the mistaken opponent a contradictory consequence of his own position in order to draw out its absurdities."</i><br><br>Daniel Perdue, <i>Debate in Tibetan Buddhism</i></p>
+</div>
+
 <div id="vennbodyfl">
 <h2 align="center">How Absurd Consequences Flow From Wrong Pervasions<br></h2>
 <h3 align="center">Step 1. Enter Opponent's Incorrect Pervasion<br>(for instance, outer value 'form', inner value 'existent')</h2>
