--- a/fourposs.html
+++ b/fourposs.html
@@ -38,7 +38,7 @@ function enterBoth(){
 </script>
 <style>
   input[type=button] {
-  width: 11em;  height: 2em;
+  width: 12em;  height: 2em;
 }
 p.TPblack {
   color: black;
@@ -48,10 +48,17 @@ p.TPwhite {
   color: white;
   font-size: 24pt;
 }
+#PerdueQuote {
+  position: absolute;
+  top: 280px;
+  left: 80px;
+  width: 540px;
+  height: 810px;
+}
 #fourposs {
   position: absolute;
   top: 0px;
-  left: 460px;
+  left: 660px;
   width: 1420px;
   height: 1080px;
   background-color:green;
@@ -119,7 +126,7 @@ p.TPwhite {
 #submitbothFP {
   position: absolute;
   top: 500px;
-  left: 1100px;
+  left: 1300px;
   width: 200px;
   height: 85px;
   z-index: 1;
@@ -127,8 +134,8 @@ p.TPwhite {
 #bothFP {
   position: absolute;
   top: 560px;
-  left: 660px;
-  width: 120px;
+  left: 820px;
+  width: 180px;
   height: 45px;
   z-index: 1;
 }
@@ -157,6 +164,10 @@ p.TPwhite {
 }
 </style>
 <body>
+<div id="PerdueQuote">
+<p align="center" style="font-size:22px; line-height: 1.8"><i>"A common locus is not something that exists halfway between the two and is neither. Rather, it is something which is both of them."</i><br><br>Daniel Perdue, <i>Debate in Tibetan Buddhism</i></p>
+</div>
+
 <div id="fourposs">
 <h2 align="left"><br><br>Four Possibilities: Finding A Common Locus<br></h2>
 
