--- a/mu.html
+++ b/mu.html
@@ -6,10 +6,25 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <style>
+#PerdueQuote {
+  position: absolute;
+  top: 80px;
+  left: 80px;
+  width: 540px;
+  height: 810px;
+}
+
+#content {
+  position: absolute;
+  top: 110px;
+  left: 160px;
+  width: 840px;
+  height: 290px;
+}
 #fourvenn {
   position: absolute;
   top: 0px;
-  left: 460px;
+  left: 660px;
   width: 1020px;
   height: 1080px;
   background-color: #000033;
@@ -149,6 +164,15 @@
 
 </style>
 <body>
+	
+
+<div id="PerdueQuote">
+<p align="center" style="font-size:22px; line-height: 1.8">One main purpose of debate is to establish the boundaries of pervasion (khyab mtha’) between phenomena. The bound­aries of pervasion or extension of a phenomenon is its range—what it pervades, what it includes, and what it excludes. By understanding clearly a phenomenon’s bound­aries of pervasion one is able to ascertain the scope of that phenomenon. The essential tool in this investigation is the analytical comparison of phenomena. By comparing two phenomena and establishing their relative boundaries of pervasion, the limits of each phenomenon in relation to the other, one comes to understand the points of similarity and dissimilarity between them.<br><br>Daniel Perdue, <i>Debate in Tibetan Buddhism</i></p>
+</div>
+	
+	
+	
+	
 <div id="fourvenn">
 <h2 align="center">The Possibilities for Comparison of Phenomena<br></h2>
 <div id="mutinc"><p align="center"><a href="mutualinc.html">Mutually Inclusive</a></p>
