--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 <h1 align="left">Open-Source Geshe: A Digital Debate Assistant</h1>
 <h3>This website is designed to assist students of Tibetan logic and debate. Currently it has the following features:</h3>
 <ul>
-<li><a href="mu.html">A page displaying the possibilities for the comparison of phenomena.</a><br></li><br>
-<li><a href="modes.html">An interactive page demonstrating the modes of a syllogistic reason.</a><br></li><br>
-<li><a href="threeposs.html">An interactive page demonstrating correct and incorrect pervasions.</a><br></li><br>
-<li><a href="fling.html">An interactive page demonstrating how absurd consequences flow from wrong pervasions.</a><br></li><br>
-<li><a href="fourposs.html">An interactive page illustrating four possibilities.</a><br></li><br>
-<li><a href="mutualex.html">An interactive page illustrating mutual exclusion.</a><br></li><br>
-<li><a href="mutualinc.html">An interactive page illustrating mutual inclusion.</a><br></li><br>
+<li><a href="mu.html">Comparison of Phenomena</a><br></li><br>
+<li><a href="modes.html">Three Modes of a Correct Reason</a><br></li><br>
+<li><a href="threeposs.html">Three Possibilities</a><br></li><br>
+<li><a href="fling.html">Flinging Absurd Consequences</a><br></li><br>
+<li><a href="fourposs.html">Four Possibilities</a><br></li><br>
+<li><a href="mutualex.html">Mutual Exclusion</a><br></li><br>
+<li><a href="mutualinc.html">Mutual Inclusion</a><br></li><br>
 </ul>
-<p class="yellow">Under construction, August, 2019. William Magee, Maitripa College.<br>Source code available at <a href="http://github.com/wam7c/debate"</a> Github.</p>
+<p class="yellow">Under construction, August, 2019. William Magee, Maitripa College.<br>Source code available at <a href="http://github.com/wam7c/debate"> Github</a>. Feel free to appropriate this code for educational purposes.</p>
 
 </div>
 
