--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
            
 </div>
 <div id="indexbody">
+<p align="left"><img src="courtyard.jpg" alt="Debating Courtyard"></p>
 <h1 align="left">Open-Source Geshe: A Digital Debate Assistant</h1>
 <h3>This website is designed to assist students of Tibetan logic and debate. Currently it has the following features:</h3>
 <ul>
