--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 <h3>This website is designed to assist students of Tibetan logic and debate. Currently it has the following features:</h3>
 <ul>
 <li><a href="mu.html">Comparison of Phenomena</a><br></li><br>
+<li><a href="threeposs.html">Pervasion Statements</a><br></li><br>
 <li><a href="modes.html">Three Modes of a Correct Reason</a><br></li><br>
-<li><a href="threeposs.html">Three Possibilities</a><br></li><br>
 <li><a href="fling.html">Flinging Absurd Consequences</a><br></li><br>
 <li><a href="fourposs.html">Four Possibilities</a><br></li><br>
 <li><a href="mutualex.html">Mutual Exclusion</a><br></li><br>
