--- a/threeposs.html
+++ b/threeposs.html
@@ -141,7 +141,7 @@ p.TPwhite {
 </div>
 		
 <div id="threeposs">
-<h2 align="left"><br><br>Three Possibilities Demonstrating Pervasion<br></h2>
+<h2 align="left"><br><br>Pervasion Statements: Three Possibilities<br></h2>
 <div id="circleBTP"></div>
 <div id="circleSTP"></div>
 <div id="neitherTP"><p class="TPwhite" align="center"><span id='neitherText'></span> </p></div>
