--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <li><a href="mutualex.html">Mutual Exclusion</a><br></li><br>
 <li><a href="mutualinc.html">Mutual Inclusion</a><br></li><br>
 </ul>
-<p class="yellow">Under construction, August, 2019. William Magee, Maitripa College.<br>Source code available at <a href="http://github.com/wam7c/debate"> Github</a>. Feel free to appropriate this code for educational purposes.</p>
+<p class="yellow">Under construction, August, 2019. William Magee, Maitripa College and the UMA Institute for Tibetan Studies.<br>Source code available at <a href="http://github.com/wam7c/debate"> Github</a>. Feel free to appropriate this code for educational purposes.</p>
 
 </div>
 
