--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Digital Debate Assistant</title>
-<link rel="stylesheet" type="text/css" href="debate.css">
+<link rel="stylesheet" type="text/css" href="http://uma-tibet.org/debate/debate.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <style>
@@ -77,8 +77,8 @@
 <li><a href="modes.html">Three Modes of a Correct Reason</a><br></li><br>
 <li><a href="fling.html">Flinging Absurd Consequences</a><br></li><br>
 <li><a href="fourposs.html">Four Possibilities</a><br></li><br>
-<li><a href="mutualex.html">Mutual Exclusion</a><br></li><br>
 <li><a href="mutualinc.html">Mutual Inclusion</a><br></li><br>
+<li><a href="mutualex.html">Mutual Exclusion</a><br></li><br>
 </ul>
 <p class="yellow">Under construction, August, 2019. William Magee, Maitripa College and the UMA Institute for Tibetan Studies.<br>Source code available at <a href="http://github.com/wam7c/debate"> Github</a>. Feel free to appropriate this code for educational purposes.</p>
 
