--- a/mutualex.html
+++ b/mutualex.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Mutually Exclusive</title>
-<link rel="stylesheet" type="text/css" href="http://uvaphd.com/debate.css">
+<link rel="stylesheet" type="text/css" href="debate.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <script type="text/javascript">
