--- a/mutualinc.html
+++ b/mutualinc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Mutually Inclusive</title>
-<link rel="stylesheet" type="text/css" href="http://uvaphd.com/debate.css">
+<link rel="stylesheet" type="text/css" href="debate.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <script type="text/javascript">
@@ -64,6 +64,7 @@ p.TPblack {
   left: 80px;
   width: 540px;
   height: 810px;
+  background-color: #000033;
 }
 #mutualinc {
   position: absolute;
