--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
 <h3>This website is designed to assist students of Tibetan logic and debate. Currently it has the following features:</h3>
 <ul>
 <li><a href="mu.html">Comparison of Phenomena</a><br></li><br>
-<li><a href="threeposs.html">Pervasion Statements</a><br></li><br>
-<li><a href="modes.html">Three Modes of a Correct Reason</a><br></li><br>
-<li><a href="fling.html">Flinging Absurd Consequences</a><br></li><br>
-<li><a href="fourposs.html">Four Possibilities</a><br></li><br>
-<li><a href="mutualinc.html">Mutual Inclusion</a><br></li><br>
-<li><a href="mutualex.html">Mutual Exclusion</a><br></li><br>
+<ul>
+<li><a href="mutualinc.html">Mutually Inclusive Phenomena</a><br></li><br>
+<li><a href="mutualex.html">Mutually Exclusive Phenomena</a><br></li><br>
+<li><a href="threeposs.html">Phenomena Having Three Possibilies</a><br></li><br>
+<li><a href="fourposs.html">Phenomena Having Four Possibilities</a><br></li><br>
+</ul>
+<li><a href="modes.html">Analyzing Syllogisms: the Three Modes of a Correct Reason</a><br></li><br>
+<li><a href="fling.html">The Procedure for Flinging an Absurd Consequence</a><br></li><br>
+
+
 </ul>
 <p class="yellow">Under construction. Copyright © William Magee, 2019. Source code available under Creative Commons License at <a href="http://github.com/wam7c/debate"> Github</a>.</p>
 
